[package]
name = "cnctd"
version = "0.1.4"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Collection of cnctd modules"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cnctd_android_project = { path = "../cnctd_android_project" }
cnctd_bump = { path = "../cnctd_bump" }
cnctd_cargo = { path = "../cnctd_cargo" }
cnctd_dialogue = { path = "../cnctd_dialogue" }
cnctd_docker = { path = "../cnctd_docker" }
cnctd_git = { path = "../cnctd_git"}
cnctd_go = { path = "../cnctd_go" }
cnctd_npm = { path = "../cnctd_npm" }
cnctd_redis = { path = "../cnctd_redis" }
cnctd_server_api = { path = "../cnctd_server_api" }
cnctd_shell = { path = "../cnctd_shell" }
cnctd_xcode = { path = "../cnctd_xcode" }
