[package]
name = "cnctd"
version = "0.1.5"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Collection of cnctd modules"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cnctd_android_project = { version = "0.1.1", path = "../cnctd_android_project" }
cnctd_bump = { version = "0.1.3", path = "../cnctd_bump" }
cnctd_cargo = { version = "0.1.3", path = "../cnctd_cargo" }
cnctd_dialogue = { version = "0.1.1", path = "../cnctd_dialogue" }
cnctd_docker = { version = "0.1.1", path = "../cnctd_docker" }
cnctd_go = { version = "0.1.1", path = "../cnctd_go" }
cnctd_npm = { version = "0.1.1", path = "../cnctd_npm" }
cnctd_redis = { version = "0.1.3", path = "../cnctd_redis" }
cnctd_server_api = { version = "0.1.1", path = "../cnctd_server_api" }
cnctd_shell = { version = "0.1.7", path = "../cnctd_shell" }
cnctd_xcode = { version = "0.1.1", path = "../cnctd_xcode" }
